clang/test/BSC/Negative/Trait/GenericTrait/impl_trait_for_undefine_type1/impl_trait_for_undefine_type1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F<T> {
};

impl trait F<int> for struct S; // expected-error {{variable has incomplete type 'struct S'}}